--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,67 +38,17 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 
-# Core dependencies
-dependencies = ["torch>=2.0.0", "numpy>=1.21.0", "typing-extensions>=4.0.0"]
-
-# Optional dependencies for different use cases
-[project.optional-dependencies]
-# Core functionality (always recommended)
-core = ["torch>=2.0.0", "numpy>=1.21.0"]
-
-# Materials science integration
-materials = [
+dependencies = [
+    "torch>=2.0.0",
+    "numpy>=1.21.0",
+    "typing-extensions>=4.0.0",
+    "pydantic==2.9.2",
+    "mp_api==0.44.0",
     "pymatgen>=2023.1.0",
-    "matminer>=0.8.0",
-    "ase>=3.22.0",
     "spglib>=2.0.0",
     "pyxtal>=0.6.6",
+
 ]
-
-# Advanced structure processing
-structures = [
-    "pymatgen>=2023.1.0",
-    "ase>=3.22.0",
-    "spglib>=2.0.0",
-    "torch-geometric>=2.3.0",
-    "pyxtal>=0.6.6",
-]
-
-# Data sources and databases
-data = ["pymatgen>=2023.1.0", "matminer>=0.8.0", "requests>=2.28.0"]
-
-# Visualization and plotting
-viz = ["matplotlib>=3.5.0", "plotly>=5.0.0", "seaborn>=0.11.0"]
-
-# Performance and optimization
-performance = ["torch>=2.0.0", "numba>=0.56.0", "cython>=0.29.0"]
-
-# Development and testing
-dev = [
-    "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
-    "pytest-xdist>=3.0.0",
-    "black>=23.0.0",
-    "isort>=5.12.0",
-    "flake8>=6.0.0",
-    "mypy>=1.0.0",
-    "pre-commit>=3.0.0",
-]
-
-# Documentation
-docs = [
-    "sphinx>=6.0.0",
-    "sphinx-rtd-theme>=1.2.0",
-    "myst-parser>=0.18.0",
-    "nbsphinx>=0.9.0",
-    "jupyter>=1.0.0",
-]
-
-# Full installation (includes most optional dependencies)
-full = ["bifrost-crystals[core,materials,structures,data,viz,performance]"]
-
-# Everything including development tools
-all = ["bifrost-crystals[full,dev,docs]"]
 
 # Default installation
 [project.urls]
@@ -122,3 +72,4 @@ exclude = ["tests*", "docs*", "examples*"]
 bifrost-train = "bifrost.train_test:main"
 bifrost-generate = "bifrost.generation_cli:main"
 bifrost-generate-vocab = "bifrost.data.generate_wyckoff_data:main"
+# Core dependencies
